force-app/main/default/objects/leankor__Subscriber__c/leankor__Subscriber__c.object-meta.xml
<CustomObject>
    <description>Users can subscribe to various KanbanCard objects and be informed when they are moved, are completed, are past due and other events. This object holds the relationship between a particular User, a KanbanCard and the specific events to which that User has subscribed.</description>
    <label>Subscriber</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Subscriber Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>