force-app/main/default/objects/leankor__Subscriber__c/fields/leankor__Flag__c.field-meta.xml
<CustomField>
    <fullName>leankor__Flag__c</fullName>
    <label>Flag</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>