force-app/main/default/objects/leankor__Subscriber__c/fields/leankor__isTaskCompleted__c.field-meta.xml
<CustomField>
    <fullName>leankor__isTaskCompleted__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is checking in KanbanCard; Task on the card is completed or not.</description>
    <label>isTaskCompleted</label>
    <type>Checkbox</type>
</CustomField>