force-app/main/default/objects/leankor__Subscriber__c/fields/leankor__Moved__c.field-meta.xml
<CustomField>
    <fullName>leankor__Moved__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KanbanMove</label>
    <type>Checkbox</type>
</CustomField>