force-app/main/default/objects/leankor__Subscriber__c/fields/leankor__PercentDone__c.field-meta.xml
<CustomField>
    <fullName>leankor__PercentDone__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PercentDone</label>
    <type>Checkbox</type>
</CustomField>