force-app/main/default/objects/leankor__Subscriber__c/fields/leankor__Preference__c.field-meta.xml
<CustomField>
    <fullName>leankor__Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preference</label>
    <referenceTo>leankor__Preference__c</referenceTo>
    <relationshipLabel>Subscribers</relationshipLabel>
    <relationshipName>Subscribers</relationshipName>
    <type>Lookup</type>
</CustomField>