force-app/main/default/objects/leankor__Subscriber__c/fields/leankor__SubscriberID__c.field-meta.xml
<CustomField>
    <fullName>leankor__SubscriberID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Subscribers</relationshipName>
    <type>Lookup</type>
</CustomField>