force-app/main/default/objects/leankor__Subscriber__c/fields/leankor__SubscriberKey__c.field-meta.xml
<CustomField>
    <fullName>leankor__SubscriberKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This is External key for Subscriber.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>SubscriberKey</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>