force-app/main/default/objects/leankor__Subscriber__c/fields/leankor__TaskPastDueDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__TaskPastDueDate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TaskPastDueDate</label>
    <type>Checkbox</type>
</CustomField>